--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AskQuestionActivity"
+        <activity android:name=".activities.AskQuestionActivity"
             />
-        <activity android:name=".QuestionDetailActivity">
+        <activity android:name=".activities.QuestionDetailActivity">
         </activity>
-        <activity android:name=".AddAnswerActivity"/>
+        <activity android:name=".activities.AddAnswerActivity"/>
     </application>
 
 </manifest>
